# Exercici5.1

./: README.md  package.xml
launch/: display.launch
urdf/: exercici51.urdf  piatek.urdf
urdf/meshes/: Camara-motor.stl  Final_design.stl
