<?xml version="1.0"?>

<package>
  <name>Exercici5.1</name>
  <version>0.0.0</version>
  <description>The piatek_description package</description>

  <maintainer email="sandraa_03@hotmail.es">Sandra</maintainer>

  <license>BSD</license>

  <author email="sandraa_03@hotmail.es">Sandra</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>


